[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres"] }
toml = "0.5.9"
